callbacks explanation added

--- a/research/03_prepare_callbacks.ipynb
+++ b/research/03_prepare_callbacks.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Callbacks are objects or functions that you can specify to be executed at specific points during the training process.\n",
+    "\n",
+    "Callbacks allow you to customize and control the training process, monitor its progress, and perform various tasks such as saving model checkpoints, logging training metrics, early stopping, and more"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checkpointing: You can use callbacks to save the model's weights or entire model architecture at specific intervals (e.g., after each epoch or when the model achieves the best performance on a validation dataset). This helps you keep track of the model's progress and recover the best model in case of unexpected interruptions."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
